--- a/ideaForge/Pages/LoginPages/OTPVerification.xaml
+++ b/ideaForge/Pages/LoginPages/OTPVerification.xaml
@@ -54,7 +54,11 @@
              Orientation="Horizontal"
             Margin="13,0,0,5" Height="26" VerticalAlignment="Bottom">
             <Label  Content="Didn't receive OTP?" Foreground="DimGray"/>
-            <Label MouseLeftButtonDown="Label_ResendOTPBTN" Foreground="#91c84f" MouseLeftButtonUp="Label_ResendOTPBTN" FontWeight="Bold">Resend OTP in 120 sec</Label>
+            <Grid>
+                <Label x:Name="lblResendOTP"  Cursor="Hand"  MouseLeftButtonDown="Label_ResendOTPBTN" Foreground="#91c84f" MouseLeftButtonUp="Label_ResendOTPBTN" FontWeight="Bold">Resend OTP</Label>
+                <Label  x:Name="lbl120sec"  Foreground="#91c84f" FontWeight="Bold">Resend OTP in 120 sec</Label>
+            </Grid>
+           
         </StackPanel>
         <!--<Button Grid.Row="6" 
                 Height="35"
