--- a/ideaForge/Pages/DashboardPages/Requests.xaml
+++ b/ideaForge/Pages/DashboardPages/Requests.xaml
@@ -12,6 +12,19 @@
     <UserControl.DataContext>
         <vm:RequestViewModel/>
     </UserControl.DataContext>
+    <UserControl.Resources>
+        <Style TargetType="TextBlock">
+            
+              
+                    <Style.Triggers>
+                        <Trigger Property ="IsMouseOver" Value="False">
+                            <Setter Property= "Foreground" Value="Black"/>
+                        </Trigger>
+                    </Style.Triggers>
+    
+           
+        </Style>
+    </UserControl.Resources>
     <Grid>
         <TabControl  SelectionChanged="TabControl_SelectionChanged" >
             <TabControl.Resources>
@@ -52,60 +65,82 @@
                         <ColumnDefinition Width="33*"/>
                         <ColumnDefinition Width="67*"/>
                     </Grid.ColumnDefinitions>
-                    <DataGrid FontSize="14"
+                    <DataGrid FontSize="14" Foreground="Black"
                             HorizontalScrollBarVisibility="Visible"
                          CanUserDeleteRows="False" CanUserAddRows="False" SelectionMode="Single"
                    MouseDoubleClick="DataGrid_MouseDoubleClick"
-                        SelectedItem="{Binding TodaysRequests,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
-                        ItemsSource="{Binding TodayRequest,Mode=TwoWay}" 
+                        SelectedItem="{Binding TodayRequest,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
+                        ItemsSource="{Binding TodaysRequests,Mode=TwoWay}" 
                         
                         AutoGenerateColumns="False"
                         CanUserSortColumns="True" 
                         Grid.ColumnSpan="2">
-                        <!--<DataGrid.Resources>
-                            <Style TargetType="{x:Type DataGridColumnHeader}">
-                                <Setter Property="ContentTemplate">
-                                    <Setter.Value>
-                                        <DataTemplate>
-                                            <TextBlock Text="{Binding}" TextWrapping="Wrap"/>
-                                        </DataTemplate>
-                                    </Setter.Value>
-                                </Setter>
+                        <DataGrid.RowStyle>
+                            <Style TargetType="DataGridRow">
+                                <Style.Triggers>
+                                    <Trigger Property="IsMouseOver"
+                         Value="True">
+                                        <Setter Property="Background"
+                            Value="#E8F4D9" />
+                                    </Trigger>
+                                </Style.Triggers>
                             </Style>
-                        </DataGrid.Resources>-->
+                        </DataGrid.RowStyle>
+                        
                         <DataGrid.Columns>
 
-                            <DataGridTemplateColumn  Header="Booking Id" Width="auto">
+                            <DataGridTemplateColumn  Header="Booking Id" Width="*">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
                                         <Label Content="{Binding id}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
-                            <DataGridTemplateColumn  Header="UserName &amp; Contact" Width="200">
+                            <DataGridTemplateColumn  Header="UserName &amp; Contact" Width="*">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
                                         <StackPanel Orientation="Vertical" >
-                                            <TextBlock Text="{Binding userName}" FontWeight="SemiBold"/>
-                                            <TextBlock Text="{Binding contactNo}"/>
+                                            <TextBlock Text="{Binding userName}" FontWeight="SemiBold">
+                                                <TextBlock.Style>
+                                                    <Style TargetType="TextBlock">
+                                                        <Style.Triggers>
+                                                            <Trigger Property ="IsMouseOver" Value="False">
+                                                                <Setter Property= "Foreground" Value="Black"/>
+                                                            </Trigger>
+                                                        </Style.Triggers>
+                                                    </Style>
+                                                </TextBlock.Style>
+</TextBlock>
+                                            <TextBlock Text="{Binding contactNo}">
+                                                <TextBlock.Style>
+                                                    <Style TargetType="TextBlock">
+                                                        <Style.Triggers>
+                                                            <Trigger Property ="IsMouseOver" Value="False">
+                                                                <Setter Property= "Foreground" Value="Black"/>
+                                                            </Trigger>
+                                                        </Style.Triggers>
+                                                    </Style>
+                                                </TextBlock.Style>
+                                           
+                                            </TextBlock>
                                         </StackPanel>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
-                            <DataGridTemplateColumn CanUserSort="True" Header="IF Dock" Width="auto">
+                            <DataGridTemplateColumn CanUserSort="True" Header="IF Dock" Width="*">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
                                         <Label Content="{Binding location}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
-                            <DataGridTemplateColumn CanUserSort="True" Header="Date &amp; Time Slot" Width="auto">
+                            <DataGridTemplateColumn CanUserSort="True" Header="Date &amp; Time Slot" Width="*">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
                                         <StackPanel Orientation="Vertical">
                                             <TextBlock>
-                                            <Run FontWeight="SemiBold" Text="{Binding  startDate,StringFormat={}{0:dd/MM/yyyy}}"/>
-
+                                               <Run FontWeight="SemiBold" Text="{Binding  startDate,StringFormat={}{0:dd/MM/yyyy}}"/>
+                                               
                                             </TextBlock>
                                             <TextBlock>
                                              <Run Text="{Binding  startDate,StringFormat='{}{0:hh:mm:ss tt}'}"/>
@@ -117,7 +152,7 @@
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
-                            <DataGridTemplateColumn CanUserSort="True" Header="Status" Width="auto">
+                            <DataGridTemplateColumn CanUserSort="True" Header="Status" Width="*">
 
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
@@ -147,16 +182,17 @@
                                 </DataGridTemplateColumn.CellTemplate>
 
                             </DataGridTemplateColumn>
-                            <DataGridTemplateColumn CanUserSort="False" Header="Action" Width="250">
+                            <DataGridTemplateColumn CanUserSort="False" Header="Action" Width="*">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
                                         <StackPanel Orientation="Horizontal"  >
                                             <Button
                                                 Margin="5,0"
+                                                Width="32"
                                                 BorderBrush="#E9E9E9" 
                                                     Visibility="{Binding ViewButtonVisible, FallbackValue=Hidden}"
                                                     BorderThickness="1"
-                                                    Background="Transparent"
+                                                    Background="White"
                                                     Command="{Binding 
                                                 RelativeSource={RelativeSource 
                                                 AncestorType={x:Type UserControl}}, 
@@ -164,15 +200,16 @@
                                                     CommandParameter="{Binding .}">
                                                 <StackPanel Orientation="Horizontal">
                                                     <Image Height="8" Source="/Images/viewButtonIcon.png" />
-                                                    <TextBlock Margin="5,0">View</TextBlock>
+                                                    <!--<TextBlock Margin="5,0">View</TextBlock>-->
                                                 </StackPanel>
                                             </Button>
                                             <Button 
                                                 Margin="5,0"
+                                                 Width="32"
                                                 BorderBrush="#E9E9E9" 
                                                     Visibility="{Binding IsVisibleButton, FallbackValue=Hidden}"
                                                     BorderThickness="1"
-                                                    Background="Transparent"
+                                                    Background="White"
                                                     Command="{Binding 
                                                 RelativeSource={RelativeSource 
                                                 AncestorType={x:Type UserControl}}, 
@@ -180,15 +217,16 @@
                                                     CommandParameter="{Binding .}">
                                                 <StackPanel Orientation="Horizontal">
                                                     <Image Height="8" Source="/Images/acceptIcon.png" />
-                                                    <TextBlock Margin="5,0">Accept</TextBlock>
+                                                    <!--<TextBlock Margin="5,0">Accept</TextBlock>-->
                                                 </StackPanel>
                                             </Button>
                                             <Button 
                                                 Visibility="{Binding IsVisibleButton, FallbackValue=Hidden}"
                                                 Margin="5,0"
+                                                 Width="32"
                                                 BorderBrush="#E9E9E9" 
                                                     BorderThickness="1"
-                                                    Background="Transparent"
+                                                    Background="White"
                                                 Command="{Binding 
                                                 RelativeSource={RelativeSource 
                                                 AncestorType={x:Type UserControl}}, 
@@ -197,7 +235,7 @@
                                                     CommandParameter="{Binding .}">
                                                 <StackPanel Orientation="Horizontal">
                                                     <Image Height="8" Source="/Images/rejectIcon.png" />
-                                                    <TextBlock Margin="5,0">Reject</TextBlock>
+                                                    <!--<TextBlock Margin="5,0">Reject</TextBlock>-->
                                                 </StackPanel>
                                             </Button>
                                         </StackPanel>
@@ -245,14 +283,14 @@
                         </DataGrid.Resources>-->
                         <DataGrid.Columns>
 
-                            <DataGridTemplateColumn  Header="Booking Id" Width="auto">
+                            <DataGridTemplateColumn  Header="Booking Id" Width="*">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
                                         <Label Content="{Binding id}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
-                            <DataGridTemplateColumn  Header="UserName &amp; Contact" Width="200">
+                            <DataGridTemplateColumn  Header="UserName &amp; Contact" Width="*">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
                                         <StackPanel Orientation="Vertical" >
@@ -262,14 +300,14 @@
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
-                            <DataGridTemplateColumn CanUserSort="True" Header="IF Dock" Width="auto">
+                            <DataGridTemplateColumn CanUserSort="True" Header="IF Dock" Width="*">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
                                         <Label Content="{Binding location}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
-                            <DataGridTemplateColumn CanUserSort="True" Header="Date &amp; Time Slot" Width="auto">
+                            <DataGridTemplateColumn CanUserSort="True" Header="Date &amp; Time Slot" Width="*">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
                                         <StackPanel Orientation="Vertical">
@@ -287,7 +325,7 @@
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
-                            <DataGridTemplateColumn CanUserSort="True" Header="Status" Width="auto">
+                            <DataGridTemplateColumn CanUserSort="True" Header="Status" Width="*">
 
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
@@ -317,7 +355,7 @@
                                 </DataGridTemplateColumn.CellTemplate>
 
                             </DataGridTemplateColumn>
-                            <DataGridTemplateColumn CanUserSort="False" Header="Action" Width="250">
+                            <DataGridTemplateColumn CanUserSort="False" Header="Action" Width="*">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
                                         <StackPanel Orientation="Horizontal"  >
@@ -334,7 +372,7 @@
                                                     CommandParameter="{Binding .}">
                                                 <StackPanel Orientation="Horizontal">
                                                     <Image Height="8" Source="/Images/viewButtonIcon.png" />
-                                                    <TextBlock Margin="5,0">View</TextBlock>
+                                                    <!--<TextBlock Margin="5,0">View</TextBlock>-->
                                                 </StackPanel>
                                             </Button>
                                             <Button 
@@ -350,7 +388,7 @@
                                                     CommandParameter="{Binding .}">
                                                 <StackPanel Orientation="Horizontal">
                                                     <Image Height="8" Source="/Images/acceptIcon.png" />
-                                                    <TextBlock Margin="5,0">Accept</TextBlock>
+                                                    <!--<TextBlock Margin="5,0">Accept</TextBlock>-->
                                                 </StackPanel>
                                             </Button>
                                             <Button 
@@ -367,7 +405,7 @@
                                                     CommandParameter="{Binding .}">
                                                 <StackPanel Orientation="Horizontal">
                                                     <Image Height="8" Source="/Images/rejectIcon.png" />
-                                                    <TextBlock Margin="5,0">Reject</TextBlock>
+                                                    <!--<TextBlock Margin="5,0">Reject</TextBlock>-->
                                                 </StackPanel>
                                             </Button>
                                         </StackPanel>
